Fix spacing after custom views

--- a/css/style.css
+++ b/css/style.css
@@ -256,8 +256,7 @@ button {
     align-items: center;
     gap: 10px;
 
-    margin: 10px;
-    margin: 0 10px 25px 10px;
+    margin: 0 10px 10px 10px;
     padding: 30px 10px 10px 10px;
     
     border-width: 1px;
@@ -276,7 +275,7 @@ button {
 #custom-view.inactive {
     padding: 0;
     border-bottom: 0;
-    border-collapse: collapse;
+    margin-bottom: 25px;
 }
 
 .col-custom-label {
